--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.2.3
+dj-database-url==0.5.0
 Django==3.0.3
 gunicorn==20.0.4
+psycopg2==2.8.4
 pytz==2019.3
 six==1.14.0
 sqlparse==0.3.0
