--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.2.3
 dj-database-url==0.5.0
 Django==3.0.3
+django-heroku==0.3.1
 gunicorn==20.0.4
 psycopg2==2.8.4
+python-dotenv==0.11.0
 pytz==2019.3
 six==1.14.0
 sqlparse==0.3.0
